--- a/stylesheets/scss/_search.scss
+++ b/stylesheets/scss/_search.scss
@@ -24,6 +24,7 @@
     .front-page & {
       display: none;
       margin-left: 9px;
+      top: -1px;
 
       &.inline {
         display: block;
